=======================
Stalker Pyramid Changes
=======================

0.1.0.b1
========

* **Update:** The Pyramid part of Stalker is moved in to a new package (this
  one).

pre 0.1.0.b1
============

* **Update:** All the date values are now returned as **UTC String** and
  stored in database as UTC datetime thus Stalker now supports Time Zones.
* **Fix:** Fixed all the dialogs with TimeTextBox inputs, where the
  date portion was reset to epoch by the widget itself, causing a change in
  Day Light Saving of the users locale and the dialog was reporting wrong
  date time values. Now in those dialogs, on submit a new date object is
  created or the DateTextBox widget value is used and the time portion of the
  Date object is updated from the TimeTextBox. This way, it is guaranteed to
  get correct date and time values.
* **Fix:** Fixed Studio create/update dialog, it is now correctly setting the
  start and end hours of a non working day.
* **New:** Studio Page is created.It has Tasks and Resources as Tabs.
* **New:** Update Studio function id added.
* **New:** Thumbnail Add function is added to several objects' Summarize Pages.
    (Task, Asset, Shot, Sequence,Department, Group). List Page is also updated
    by new thumbnail information.
* **Fix:** dgrid height attribute is updated and new div's are added for
    dgrid object.
* **Fix:** Working hours for each day is taken from database in
    Studio Update Dialog.
* **New:** List Ticket page and Create/Update Ticket dialog are created.
* **Fix:** Added logged_in_user object to user page to fix permission bug. So
    default facilities of page is define based on logged_in_user.
* **Fix:** Fixed DGrid auto height problem.

* **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
  only the children and parents of that Task derivative.
* **Update:** Task create/update dialog now displays the full hierarchy in
  parent/dependent task listings.