@@ -81,7 +81,7 @@
                             return object; // return entire item for formatter to use
                         },
                         formatter: function (object) {
-                            var path = '{{ request.static_url("stalker:static/stalker/images/Placeholder_0.png") }}';
+                            var path = '{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_0.png") }}';
                             if (object.thumbnail_path) {
                                 path = object.thumbnail_path;
                             }
