@@ -86,7 +86,7 @@
                         },
                         formatter: function (object) {
 
-                            var path = '{{ request.static_url("stalker:static/stalker/images/Placeholder_Team.png") }}';
+                            var path = '{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_Team.png") }}';
                             if (object.thumbnail_path) {
                                 path = object.thumbnail_path;
                             }
