@@ -65,7 +65,7 @@
                             return object; // return entire item for formatter to use
                         },
                         formatter: function (value) {
-                            var path = '{{ request.static_url("stalker:static/stalker/images/T_NO_IMAGE.gif") }}';
+                            var path = '{{ request.static_url("stalker_pyramid:static/stalker/images/T_NO_IMAGE.gif") }}';
                             if (value.thumbnail_path) {
                                 path = value.thumbnail_path;
                             }
