@@ -3,7 +3,7 @@
     {# Avatar #}
     <div id='sequence_thumbnail' class='thumbnail'>
         {% if not sequence.thumbnail %}
-            <img src='{{ request.static_url("stalker:static/stalker/images/Placeholder_shot.png") }}'
+            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/Placeholder_shot.png") }}'
                  alt=''
                  style='width:120px;'>
         {% endif %}
