@@ -30,7 +30,7 @@
     {# Thumbnail #}
     <div id='studio_summarize_thumbnail' class='thumbnail'>
         {% if not studio.thumbnail %}
-            <img src='{{ request.static_url("stalker:static/stalker/images/T_NO_IMAGE.gif") }}'
+            <img src='{{ request.static_url("stalker_pyramid:static/stalker/images/T_NO_IMAGE.gif") }}'
                  alt=''
                  style='width:192px; height: auto;'>
         {% else %}
